second part overflow fixing

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ html {
 body {
   font-family: 'Montserrat', sans-serif;
   margin: 0;
+  overflow-x: hidden;
 }
 
 p {
